[project]
name = "jobty"
version = "0.1.0"
description = "A simple CLI for tracking all your job applications."
readme = "README.md"
authors = [
    { name = "El John", email = "bongaeljohn07@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "typer>=0.24.1",
]

[project.scripts]
jobty = "jobty.main:app"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
